# mcp-inspector-server

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.yaml  pyproject.toml  server.py  test_webhook.md
prompts/: inspector_guidance.py
resources/: mcp_inspector_resources.py
tools/: mcp_inspector_tools.py
