[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-inspector-server"
version = "1.0.0"
description = "MCP server: mcp-inspector-server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp-factory>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"