[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-inspector-server"
version = "1.0.0"
description = "MCP server: mcp-inspector-server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "fastmcp>=2.10.6", "pydantic>=2.0.0", "pyyaml>=6.0.0", "mcp-factory",]

[project.optional-dependencies]
dev = [ "pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "ruff>=0.1.0",]

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 88
target-version = [ "py310",]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mcp-servers-hub]
name = ""
description = "MCP server: mcp-inspector-serveruv run python -m mcp_factory.cli.main project publish workspace/projects/mcp-inspector-server"
author = ""
github_username = "ACNet-AI"
categories = [ "tools",]
installation_id = "77170704"

[tool.setuptools.packages.find]
where = [ ".",]
include = []
